--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-dev-server": "^3.10.1",
+    "xsh": "^0.4.5"
   },
   "dependencies": {
     "jquery": "^3.4.1"
